@@ -57,6 +57,8 @@ Thomas Meyer and Tom Power for contributing to this release.
 }}}
 {{{ API Changes
 
+- New method ThreadUtilities.runInDispatchThreadNow() (Jarek Czekalski)
+
 - If electric key hit causes indentation, it is available as a separate
   undoable event. So it's possible to revert the reindentation and not to
   revert the character typed. (Jarek Czekalski)
